2005-05-25  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/maze2DRelative.xml.in: improved help message
	* configure.in: improved by Yves to provide python detection on newer version
	added detection for cairo and sqllite but it's not used anywhere yet

2005-05-23  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed by yves, on newer pygtk (2.6), gtk.True is deprecated
	and must be replaced by True. This solves the key double entry.
	In anim, fixed a bug when a photo was taken with right click on an anchor
	In anim, fixed the search for external (full path images)
	Question: Yves could we put external images relatives to the user home dir.
	This way we could exchange animation is the user copy her personal image dir.
	
	* src/boards/python/anim.py:
	* src/boards/python/bargame.py:
	* src/boards/python/gnumch.py:
	* src/boards/python/melody.py:
	* src/boards/python/pythontest.py:
	* src/boards/python/redraw.py:
	* src/boards/python/searace.py:
	* src/boards/python/watercycle.py:

2005-05-17  Bruno coudoin  <bruno.coudoin@free.fr>

	Updated the screenshots web site.
	
	* boards/gnumch-equality.xml.in:
	* boards/gnumch-factors.xml.in:
	* boards/gnumch-inequality.xml.in:
	* boards/gnumch-multiples.xml.in:
	* boards/gnumch-primes.xml.in:
	* boards/searace1player.xml.in:
	* docs/gcompris2spip.pl:
	* docs/screenshots/advanced_colors_small.jpg:
	* docs/screenshots/algebra_by_small.jpg:
	* docs/screenshots/algebra_guesscount_small.jpg:
	* docs/screenshots/algebra_minus_small.jpg:
	* docs/screenshots/algebra_plus_small.jpg:
	* docs/screenshots/algorithm_small.jpg:
	* docs/screenshots/anim_small.jpg:
	* docs/screenshots/babymatch_small.jpg:
	* docs/screenshots/babyshapes_small.jpg:
	* docs/screenshots/ballcatch_small.jpg:
	* docs/screenshots/bargame.jpg:
	* docs/screenshots/bargame_small.jpg:
	* docs/screenshots/billard_small.jpg:
	* docs/screenshots/canal_lock_small.jpg:
	* docs/screenshots/chess_computer_small.jpg:
	* docs/screenshots/chess_movelearn_small.jpg: