@@ -3,6 +3,7 @@
 	* boards/maze2DRelative.xml.in: improved help message
 	* configure.in: improved by Yves to provide python detection on newer version
 	added detection for cairo and sqllite but it's not used anywhere yet
+	* acinclude.m4: created by Yves, contain python checkings code.
 
 2005-05-23  Bruno coudoin  <bruno.coudoin@free.fr>
 
